--- a/examples/multi-runner/templates/runner-configs/linux-x64-ubuntu.yaml
+++ b/examples/multi-runner/templates/runner-configs/linux-x64-ubuntu.yaml
@@ -22,13 +22,14 @@ runner_config:
   delay_webhook_event: 0
   scale_down_schedule_expression: cron(* * * * ? *)
   userdata_template: ./templates/user-data.sh
-  ami_owners:
-    - "099720109477" # Canonical's Amazon account ID
-  ami_filter:
-    name:
-      - ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*
-    state:
-      - available
+  ami:
+    owners:
+      - "099720109477" # Canonical's Amazon account ID
+    filter:
+      name:
+        - ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*
+      state:
+        - available
   block_device_mappings:
     - device_name: /dev/sda1
       delete_on_termination: true
