--- a/lambdas/package.json
+++ b/lambdas/package.json
@@ -21,6 +21,7 @@
     "@octokit/types": "^13.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@nx/eslint": "20.7.1",
     "@nx/js": "^20.7.1",
     "@nx/vite": "^20.7.1",
@@ -32,7 +33,7 @@
     "@typescript-eslint/parser": "^8.26.1",
     "@vitest/coverage-v8": "^3.0.8",
     "chalk": "^5.4.1",
-    "eslint": "^8.57.1",
+    "eslint": "^9.25.0",
     "eslint-plugin-prettier": "5.2.5",
     "nx": "20.6.4",
     "prettier": "^3.5.3",
