chore: add cooldown interval to dependabot configuration (#4854)
This pull request updates the Dependabot configuration to introduce a
cooldown period for experimental branches across multiple update
directories. This change helps prevent Dependabot from creating
experimental branches too frequently, reducing noise and potential merge
conflicts.

Dependabot configuration enhancements:

* Added the `experimental-branch-cooldown` setting with `default-days:
5` to the root `/`, `/lambdas`, `/.ci/Dockerfile`,
`/.devcontainer/Dockerfile`, and `/.github/workflows/mkdocs` update
directories in `.github/dependabot.yml`.
[[1]](diffhunk://#diff-dd4fbda47e51f1e35defb9275a9cd9c212ecde0b870cba89ddaaae65c5f3cd28R18-R19)
[[2]](diffhunk://#diff-dd4fbda47e51f1e35defb9275a9cd9c212ecde0b870cba89ddaaae65c5f3cd28R30-R31)
[[3]](diffhunk://#diff-dd4fbda47e51f1e35defb9275a9cd9c212ecde0b870cba89ddaaae65c5f3cd28R63-R64)
[[4]](diffhunk://#diff-dd4fbda47e51f1e35defb9275a9cd9c212ecde0b870cba89ddaaae65c5f3cd28R75-R76)
[[5]](diffhunk://#diff-dd4fbda47e51f1e35defb9275a9cd9c212ecde0b870cba89ddaaae65c5f3cd28R87-R88)

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,8 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 5
     groups:
       github:
         patterns:
@@ -25,6 +27,8 @@ updates:
     directory: "/lambdas"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 5
     groups:
       aws:
         patterns:
@@ -60,6 +64,8 @@ updates:
     directory: "/.ci/Dockerfile"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 5
     labels:
       - "dependencies"
       - "docker"
@@ -74,6 +80,8 @@ updates:
     directory: "/.devcontainer/Dockerfile"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 5
     labels:
       - "dependencies"
       - "docker"
@@ -88,6 +96,8 @@ updates:
     directory: "/.github/workflows/mkdocs"
     schedule:
       interval: "weekly"
+    cooldown:
+      default-days: 5
     groups:
       python-deps:
         patterns:
